c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/else.c
int main(void) {
    int a = 0;
    if (a)
        return 1;
    else
        return 2;
}