c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/if_assignment.c
int main(void) {
    int flag = 0;
    int a = if (flag)
                2;
            else
                3;
    return a;
}